--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    this is project one 
+    this is project one
+    chnages made by second person 
 </body>
 </html>
